--- a/Css/index.css
+++ b/Css/index.css
@@ -1059,6 +1059,11 @@ h4 {
     border-bottom: 1px solid #9e9e9e;
 }
 
+.bcdt_items {
+    border: 1px solid #9e9e9e;
+    border-top: none;
+}
+
 .thttKH_items>p,
 .bcdt_items>p {
     flex: 1;
@@ -1181,4 +1186,42 @@ select:disabled {
     background-color: rgb(240, 240, 240);
     color: -internal-light-dark(rgb(84, 84, 84), rgb(170, 170, 170));
     border-color: rgba(118, 118, 118, 0.3);
+}
+
+.BC_more {
+    position: absolute;
+    top: 35px;
+    right: 25px;
+    width: max-content;
+    list-style: none;
+    z-index: 9999999;
+    padding: 0;
+    background-color: white;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    border-radius: 6px;
+    display: none;
+    flex-direction: column;
+}
+
+.option_bc {
+    padding: 10px 20px;
+}
+
+.option_bc:hover {
+    background-color: #e7e7e7;
+}
+
+.BC_more.acc {
+    display: flex;
+}
+
+.BC_more::before {
+    content: '';
+    position: absolute;
+    top: -25px;
+    width: 250px;
+    height: 40px;
+    right: 0;
+    background-color: transparent;
+    z-index: 99999;
 }
